--- a/style.css
+++ b/style.css
@@ -47,10 +47,51 @@ body {
 	text-align: center;
 }
 
-@media screen and (max-width: 1260px) {
+@media screen and (max-width: 1000px) {
 
 body {
 	background-color: #F6E3CE;
+	background-position: 50% 70%;
+	margin-top: 30%;
 }
+.icon {
+	border-radius: 0px;
+
+}
+.icon .mask {
+	width:			100%;
+	height:			100%;
+	position:		absolute;	/* 絶対位置指定 */
+	top:			0;
+	left:			0;
+	opacity:		1;	/* マスクを表示しない */
+	background-color:	rgba(0,0,0,0);
+	transition:		all 0.2s ease;
+}
+.icon .caption {
+	font-size:		250%;
+	text-align: 		center;
+	padding-top:		200px;
+}
+
+#murasi {
+	color: #B18904;
+}
+#imo {
+	color: #610B5E;
+}
+#yasai {
+	color: #5FB404;
+}
+#gohan {
+	color: #424242;
+}
+#niku {
+	color: #8A4B08;
+}
+#gyunyu {
+	color: #01DFD7;
+}
+
 
 }
